Issue with Program Details column header alignment is fixed

--- a/src/app/page/miip-prog-detail-view/miipProgramDetailView.less
+++ b/src/app/page/miip-prog-detail-view/miipProgramDetailView.less
@@ -11,6 +11,9 @@
   .prog-return-view {
     color: @brand-primary;
   }
+  .amount-paid-column {
+    padding-right: 200px !important;
+  }
 }
 
 @media (max-width: @screen-xs) {
